[package]
name = "dbcc"
description = "Compiles `data base CAN` (dbc) files into Rust code."
version = "2.0.0-alpha.8"
license = "MIT"
homepage = "https://github.com/marcelbuesing/dbcc"
repository = "https://github.com/marcelbuesing/dbcc.git"
documentation = "https://docs.rs/dbcc"
readme = "README.md"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu", "socketcan"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[badges]
travis-ci = { repository = "marcelbuesing/dbcc", branch = "dev" }

[dependencies]
blake2 = "0.8"
can-dbc = "2.1.1"
codegen = "0.1.1"
generic-array = "0.12"
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.2"
socketcan = "1.7"
typenum = "1.10"

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
byteorder = "1.3"
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
futures-util-preview =  { version = "0.3.0-alpha.13", features = ["compat"] }
runtime = "0.3.0-alpha.2"
tokio-socketcan-bcm = "0.2"
