[package]
name = "dbcc"
description = "Compiles `data base CAN` (dbc) files into Rust code."
version = "2.0.0-alpha.9"
license = "MIT"
homepage = "https://github.com/marcelbuesing/dbcc"
repository = "https://github.com/marcelbuesing/dbcc.git"
documentation = "https://docs.rs/dbcc"
readme = "README.md"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
keywords = ["dbc", "can", "automotive", "ecu", "socketcan"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "dbcc"

[badges]
travis-ci = { repository = "marcelbuesing/dbcc", branch = "dev" }

[dependencies]
blake2 = "0.8"
can-dbc = "3.0.0"
codegen = "0.1.1"
generic-array = "0.12"
heck = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
socketcan = "1.7"
typenum = "1.11"

[dependencies.nom]
version = "4.2"
features = ["verbose-errors"]

[dev-dependencies]
async-std = { version = "1.1", features = ["attributes"] }
byteorder = "1.3"
futures = { version = "0.3", features = ["compat"] }
futures-util=  { version = "0.3", features = ["compat"] }
tokio-socketcan-bcm = "0.2"
